<resources>
    <string name="app_name">Diet</string>

    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="remove_text">Удалить</string>


    //Main screen
    <string name="breakfast">Завтрак</string>
    <string name="breakfast_snack">Второй завтрак</string>
    <string name="lunch">Обед</string>
    <string name="lunch_snack">Полдник</string>
    <string name="dinner">Ужин</string>

    <string name="remove_meal_product_dialog_title">Удалить этот продукт?</string>

    <string name="totalAmount">Съедено: %d г</string>
    <string name="calories">эн.цен: %d ккал</string>
    <string name="proteins">белки: %.1f г</string>
    <string name="fats">жиры: %.1f г</string>
    <string name="carbohydrates">угл: %.1f г</string>
    <string name="total_text">Всего</string>

    //search screen
    <string name="search_product_text">Поиск по продуктам</string>
    <string name="amount_text">Количество</string>

    //edit screen
    <string name="defaultValuePer100gTitle">На 100 г/мл:</string>
    <string name="valueTitle">Масса(г):</string>
    <string name="save_text">Сохранить</string>

    //product addition screen
    <string name="product_title">Продукт</string>
    <string name="product_name">Наименование</string>
    <string name="calories_hint_text">Энергетическая ценность (ккал)</string>
    <string name="proteins_hint_text">Белки (г)</string>
    <string name="fats_hint_text">Жиры (г)</string>
    <string name="carbohydrates_hint_text">Углеводы (г)</string>
    <string name="serach_menu_add_product_title">Добавить продукт</string>
    <string name="addition_text">Добавить</string>

    //products screen
    <string name="products_title">Продукты</string>
    <string name="products_default_tab_title">Базовые</string>
    <string name="products_personal_tab_title">Мои</string>


    <string name="error_empty_field">Поле не должно быть пустым</string>

    <string name="error_generic">Что-то пошло не так</string>

</resources>