<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topBar"
        layout="@layout/topbar_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productName"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        tools:text="Баранина" />

    <LinearLayout
        android:id="@+id/productValueLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName">

        <TextView
            style="@style/textSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valueTitle"
            android:textSize="@dimen/text_size_l" />

        <EditText
            android:id="@+id/valueEditText"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_weight="2"
            android:hint="100" />

    </LinearLayout>

    <TextView
        android:id="@+id/productValueDefaultTitle"
        style="@style/textSubtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/defaultValuePer100gTitle"
        android:textSize="@dimen/text_size_l"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productValueLl" />

    <include
        android:id="@+id/productDefaultInfoLayout"
        layout="@layout/product_info_layout"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productValueDefaultTitle" />

    <Button
        style="@style/UnelevatedButton"
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_xxl"
        android:text="@string/save_text"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/productDefaultInfoLayout"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>